--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack-dev-server --open"
   },
   "keywords": [],
@@ -14,7 +14,7 @@
     "axios": "^0.19.0",
     "csvtojson": "^2.0.10",
     "json2csv": "^4.5.2",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.14",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
@@ -24,6 +24,7 @@
     "string-similarity": "^3.0.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.15",
     "@types/node": "^12.0.12",
     "@types/react": "^16.8.23",
     "@types/string-similarity": "^3.0.0",
@@ -32,7 +33,9 @@
     "css-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "html-webpack-template": "^6.2.0",
+    "jest": "^24.8.0",
     "style-loader": "^0.23.1",
+    "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.2",
