--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "axios": "^0.19.0",
     "csvtojson": "^2.0.10",
     "json2csv": "^4.5.2",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
+    "reinspect": "^1.0.1",
     "stopword": "^0.3.1",
     "string-similarity": "^3.0.0"
   },
